K/kubexray-08kySKzioH/kubexray.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-kubexray-kubexray-networkpolicy
  labels:
    app.kubernetes.io/name: kubexray
    app.kubernetes.io/instance: release-name
spec:
  podSelector:
    matchLabels:
      app: kubexray
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-kubexray
  labels:
    app.kubernetes.io/name: kubexray
    helm.sh/chart: kubexray-0.4.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kubexray
    app.kubernetes.io/instance: release-name
